discussion/kv_engine/176152/176152_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Meter [RW]CU for DCP

When a normal user opens a DCP stream it should record
the metering data (and include the [RW]CUs used in the throttling
data for normal operations).

Note that we don't try to throttle DCP traffic so it will always
run at full speed

Change-Id: I479ac3074fd4e10b9ffe1b514e08a1cf0e8e896e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-16 13:19:49.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-16 13:38:27.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19215/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19215/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20995/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20995/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7909/ : ABORTED

Failure of GoogleTest "SslCertTest.MB50564_intermediate_cert_not_in_trusted_store_using_chain":

<pre>
[ RUN      ] SslCertTest.MB50564_intermediate_cert_not_in_trusted_store_using_chain
[2022-06-16T13:38:19.854Z] unknown file: Failure
[2022-06-16T13:38:19.854Z] C++ exception with description "AsyncSocketException: writev failed (peer=<uninitialized address>, local=127.0.0.1:44664), type = Internal error, errno = 32 (Broken pipe)" thrown in the test body.
[2022-06-16T13:38:19.854Z] [  FAILED  ] SslCertTest.MB50564_intermediate_cert_not_in_trusted_store_using_chain (0 ms)
SslCertTest.MB50564_intermediate_cert_not_in_trusted_store_using_chain
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7909/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7909/ )

Test exceeded the timeout:
[2022-06-16T13:38:21.013Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18146/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/async_client_connection.cc:93:14: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
        std::cout << "Protocol error" << std::endl;
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18146/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/async_client_connection.cc:93:14:
error: no member named "cout" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18146/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39379/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/protocol/connection/async_client_connection.cc:93:14:
error: no member named "cout" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7807/ : FAILURE

Compile error at [2022-06-16T13:21:00.413Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/protocol/connection/async_client_connection.cc:93:14:
error: no member named "cout" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7807/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20348/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20348/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17260/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46869/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20001/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28384/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
